fix: prevent images from overflowing
Closes #192

--- a/blocks/people/people.css
+++ b/blocks/people/people.css
@@ -15,9 +15,12 @@
   grid-column: 1 / 7;
 }
 
+.home .cmp-person a {
+  overflow: hidden;
+}
+
 .home .cmp-person picture {
   aspect-ratio: 1 / 1;
-  overflow: hidden;
 }
 
 .home .cmp-person img {
