--- a/blocks/stories/stories.css
+++ b/blocks/stories/stories.css
@@ -90,9 +90,12 @@
   margin-bottom: 0;
 }
 
+.home .cmp-stories-card a {
+  overflow: hidden;
+}
+
 .home .cmp-stories-card__media {
   aspect-ratio: 1 / 1;
-  overflow: hidden;
 }
 
 .home .cmp-stories-card__media img {
